# py-cli-practice

./: README.md  makefile  pyproject.toml
src/: main.py
