[tool.poetry]
name = "py-cli-practice"
version = "0.1.0"
description = "예쁜 CLI를 연습해보자 ㅎㅎ"
authors = ["1eedaegon <d8726243@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
asciimatics = "^1.14.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poerty.scripts]
demo = "src.main"
